// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Selection render should match snapshot for container 1`] = `
<div
  className="lucid-Selection lucid-Selection-is-small lucid-Selection-container"
>
  <div
    className="lucid-Selection-content"
  >
    <div
      className="lucid-Selection-label-container"
    >
      <span
        className="lucid-Selection-label lucid-Selection-label-is-small"
      />
      <CrossIcon
        className="lucid-Selection-close-button"
        isClickable={true}
        onClick={[Function]}
        presetSize="small"
        size={28}
        viewBox="-6 -6 28 28"
      />
    </div>
    cont
  </div>
</div>
`;

exports[`Selection render should match snapshot for custom icons 1`] = `
<div
  className="lucid-Selection lucid-Selection-is-small lucid-Selection-default"
>
  <div
    className="lucid-Selection-Icon fake-icon"
  />
  <div
    className="lucid-Selection-content"
  >
    <div
      className="lucid-Selection-label-container"
    >
      <span
        className="lucid-Selection-label lucid-Selection-label-is-small"
      />
      <CrossIcon
        className="lucid-Selection-close-button"
        isClickable={true}
        onClick={[Function]}
        presetSize="small"
        size={28}
        viewBox="-6 -6 28 28"
      />
    </div>
    <Selection.Icon
      key=".0"
    >
      <div
        className="fake-icon"
      />
    </Selection.Icon>
  </div>
</div>
`;

exports[`Selection render should match snapshot for danger 1`] = `
<div
  className="lucid-Selection lucid-Selection-is-small lucid-Selection-danger"
>
  <MinusCircleIcon
    className="lucid-Selection-Icon lucid-Selection-Icon-is-small"
  />
  <div
    className="lucid-Selection-content"
  >
    <div
      className="lucid-Selection-label-container"
    >
      <span
        className="lucid-Selection-label lucid-Selection-label-is-small"
      />
      <CrossIcon
        className="lucid-Selection-close-button"
        isClickable={true}
        onClick={[Function]}
        presetSize="small"
        size={28}
        viewBox="-6 -6 28 28"
      />
    </div>
    cont
  </div>
</div>
`;

exports[`Selection render should match snapshot for info 1`] = `
<div
  className="lucid-Selection lucid-Selection-is-small lucid-Selection-info"
>
  <InfoIcon
    className="lucid-Selection-Icon lucid-Selection-Icon-is-small"
  />
  <div
    className="lucid-Selection-content"
  >
    <div
      className="lucid-Selection-label-container"
    >
      <span
        className="lucid-Selection-label lucid-Selection-label-is-small"
      />
      <CrossIcon
        className="lucid-Selection-close-button"
        isClickable={true}
        onClick={[Function]}
        presetSize="small"
        size={28}
        viewBox="-6 -6 28 28"
      />
    </div>
    cont
  </div>
</div>
`;

exports[`Selection render should match snapshot for nested selections 1`] = `
<div
  className="lucid-Selection lucid-Selection-is-small lucid-Selection-default"
>
  <div
    className="lucid-Selection-content"
  >
    <div
      className="lucid-Selection-label-container"
    >
      <span
        className="lucid-Selection-label lucid-Selection-label-is-small"
      />
      <CrossIcon
        className="lucid-Selection-close-button"
        isClickable={true}
        onClick={[Function]}
        presetSize="small"
        size={28}
        viewBox="-6 -6 28 28"
      />
    </div>
    <div
      className="lucid-Selection-children-container"
    >
      <Selection
        hasBackground={false}
        isBold={false}
        isRemovable={true}
        key="[object Object]0"
        kind="default"
        onRemove={[Function]}
        responsiveMode="small"
      >
        There
      </Selection>
    </div>
    Hello
  </div>
</div>
`;

exports[`Selection render should match snapshot for non removable 1`] = `
<div
  className="lucid-Selection lucid-Selection-is-small lucid-Selection-default"
>
  <div
    className="lucid-Selection-content"
  >
    <div
      className="lucid-Selection-label-container"
    >
      <span
        className="lucid-Selection-label lucid-Selection-label-is-small"
      />
    </div>
  </div>
</div>
`;

exports[`Selection render should match snapshot for responsiveMode small 1`] = `
<div
  className="lucid-Selection lucid-Selection-is-small lucid-Selection-default"
>
  <div
    className="lucid-Selection-content"
  >
    <div
      className="lucid-Selection-label-container"
    >
      <span
        className="lucid-Selection-label lucid-Selection-label-is-small"
      />
      <CrossIcon
        className="lucid-Selection-close-button"
        isClickable={true}
        onClick={[Function]}
        presetSize="small"
        size={28}
        viewBox="-6 -6 28 28"
      />
    </div>
    Yolo
  </div>
</div>
`;

exports[`Selection render should match snapshot for success 1`] = `
<div
  className="lucid-Selection lucid-Selection-is-small lucid-Selection-success"
>
  <SuccessIcon
    className="lucid-Selection-Icon lucid-Selection-Icon-is-small"
  />
  <div
    className="lucid-Selection-content"
  >
    <div
      className="lucid-Selection-label-container"
    >
      <span
        className="lucid-Selection-label lucid-Selection-label-is-small"
      />
      <CrossIcon
        className="lucid-Selection-close-button"
        isClickable={true}
        onClick={[Function]}
        presetSize="small"
        size={28}
        viewBox="-6 -6 28 28"
      />
    </div>
    cont
  </div>
</div>
`;

exports[`Selection render should match snapshot for warning 1`] = `
<div
  className="lucid-Selection lucid-Selection-is-small lucid-Selection-warning"
>
  <WarningIcon
    className="lucid-Selection-Icon lucid-Selection-Icon-is-small"
  />
  <div
    className="lucid-Selection-content"
  >
    <div
      className="lucid-Selection-label-container"
    >
      <span
        className="lucid-Selection-label lucid-Selection-label-is-small"
      />
      <CrossIcon
        className="lucid-Selection-close-button"
        isClickable={true}
        onClick={[Function]}
        presetSize="small"
        size={28}
        viewBox="-6 -6 28 28"
      />
    </div>
    cont
  </div>
</div>
`;
